# JuliaExplorer

./: CMakeLists.txt  README.md  project-initgl.code-workspace
LOF/: lof_cmake.txt  lof_main.txt
asset/: simple_sphere.nff
include/: GLError.h  camera.h  gltext.h  julia.h  mdl.h  renderer.h  screen.h  util.h
include/glad/: glad.h
src/: GLError.cpp  basic.fs  basic.vs  glad.c  julia.cpp  julia.fs  julia.vs  main.cpp  mdl.cpp  renderer.cpp  screen.cpp  textured.fs  textured.vs
